--- a/.github/workflows/nuclei_scan.yml
+++ b/.github/workflows/nuclei_scan.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run Nuclei scan on host
       run: |
         chmod +x nuclei.sh
-        ./nuclei.sh 
+        ./nuclei.sh "${{ github.event.inputs.myinput }}"
 
     - name: Upload Nuclei scan results
       uses: actions/upload-artifact@v4
